
2009-03-23 20:09 Ali aliov@xfce.org 
	 * : Moved notification to the common code+added notification to the inhibit plugin

2009-03-22 23:09 Ali aliov@xfce.org 
	 * : Support cookies in the inhibit interface

2009-03-22 20:45 Ali aliov@xfce.org 
	 * : Correct the tooltips of the inhibit plugin

2009-03-22 20:23 Ali aliov@xfce.org 
	 * : Provide a dbus interface to syncronize the brightness plugin and xfpm+update POTFILES

2009-03-22 19:02 Ali aliov@xfce.org 
	 * : React correctly when panel orientation changed

2009-03-22 18:42 Ali aliov@xfce.org 
	 * : Brightness and inhibit plugins are ready for user/test+fix a bug in the inhibit interface

2009-03-21  0:02 Ali aliov@xfce.org 
	 * : Added command line option to restart the power manager

2009-03-20 17:16 Ali aliov@xfce.org 
	 * : -m

2009-03-19 16:22 Ali aliov@xfce.org 
	 * : Change the default settings loaded+change the desktop.in name

2009-03-19  0:12 Ali aliov@xfce.org 
	 * : Fix a bug regarding the network manager message sleep

2009-03-18 23:29 Ali aliov@xfce.org 
	 * : Doing hibernate/suspend in a timeout function

2009-03-18 23:15 Ali aliov@xfce.org 
	 * : Fix a bug in the inhibit interface signal

2009-03-18 22:18 Ali aliov@xfce.org 
	 * : Load relevent settings depending on the form factor the power manager is running on

2009-03-18 10:46 Ali aliov@xfce.org 
	 * : Removed already deleted file from PTOFILES.in+modified string in the settings dialog

2009-03-18 10:04 Ali aliov@xfce.org 
	 * : Calculate battery percentage if this key is not present in HAL

2009-03-18  9:30 Ali aliov@xfce.org 
	 * : Check carefully if a new added device is a new battery device(hald always duplicated udi for devices)

2009-03-18  8:47 Ali aliov@xfce.org 
	 * : Added Inhibit interface+monitor ScreenSaver Inhibit messages to catch inhibition and inhibit xfpm

2009-03-17 19:54 Ali aliov@xfce.org 
	 * : Some optimization in the battery code+added GetOnBattery and on LowBattery DBus methods

2009-03-17 19:15 Ali aliov@xfce.org 