@@ -1,4 +1,7 @@
 
+2009-03-23 20:55 Ali aliov@xfce.org 
+	 * : Fix a crash in the inhibit plugin when the running power manager disappears from the session bus
+
 2009-03-23 20:09 Ali aliov@xfce.org 
 	 * : Moved notification to the common code+added notification to the inhibit plugin
 
